# executorch-examples

./: .gitignore  .gitmodules  CONTRIBUTING.md  README.md
android/ExecuTorchDemo/: README.md  settings.gradle.kts
android/ExecuTorchDemo/app/: build.gradle.kts
android/ExecuTorchDemo/app/src/main/: AndroidManifest.xml
android/ExecuTorchDemo/app/src/main/res/values/: strings.xml
apple/ExecuTorchDemo/: README.md
cifar/: README.md
cifar/android/: README.md
cifar/android/CifarETTrainingDemo/: README.md
cifar/android/CifarETTrainingDemo/app/src/androidTest/java/com/example/democifar10/: ExampleInstrumentedTest.kt
cifar/android/CifarETTrainingDemo/app/src/main/: AndroidManifest.xml
cifar/android/CifarETTrainingDemo/app/src/main/java/com/example/democifar10/: MainActivity.kt
cifar/android/CifarETTrainingDemo/app/src/main/res/layout/: activity_main.xml
cifar/android/CifarETTrainingDemo/app/src/test/java/com/example/democifar10/: ExampleUnitTest.kt
cifar/android/app/src/main/java/com/example/democifar10/: ImageTransformations.kt  MainActivity.kt
cifar/android/app/src/main/java/com/example/democifar10/ui/theme/: Theme.kt
cifar/android/app/src/test/java/com/example/democifar10/: ExampleUnitTest.kt
cifar/app/: build.gradle.kts
cifar/app/src/androidTest/java/com/example/democifar10/: ExampleInstrumentedTest.kt
cifar/app/src/main/java/com/example/democifar10/: ImageTransformations.kt  MainActivity.kt
cifar/app/src/main/java/com/example/democifar10/ui/theme/: Type.kt
dl3/android/DeepLabV3Demo/: README.md  build.gradle.kts  export_model.py  settings.gradle.kts
dl3/android/DeepLabV3Demo/app/: build.gradle.kts
dl3/android/DeepLabV3Demo/app/src/androidTest/java/com/example/executorchdemo/: SanityCheck.java
dl3/android/DeepLabV3Demo/app/src/androidTest/java/org/pytorch/executorchexamples/dl3/: SanityCheck.java
dl3/android/DeepLabV3Demo/app/src/main/: AndroidManifest.xml
dl3/android/DeepLabV3Demo/app/src/main/java/com/example/executorchdemo/: MainActivity.java
dl3/android/DeepLabV3Demo/app/src/main/java/org/pytorch/executorchexamples/dl3/: MainActivity.java  TensorImageUtils.java
dl3/android/DeepLabV3Demo/app/src/main/res/layout/: activity_main.xml
dl3/android/DeepLabV3Demo/app/src/main/res/values/: strings.xml  themes.xml
dl3/python/: demo.py  export.py
efficient_sam/wasm/: CMakeLists.txt  README.md  build.sh  demo.html  demo.js  export.sh
examples/image_classification/apple/MobileNetV3Demo/: README.md
llm/: README.md
llm/android/: README.md
llm/apple/ios/: README.md
llm/cpp/: README.md
llm/python/: README.md
mv2/cpp/: CMakeLists.txt  README.md  main.cpp
mv2/python/: README.md  export.py  requirements.txt  run.py
mv2/wasm/: CMakeLists.txt  README.md  build.sh  demo.js
mv3/apple/ExecuTorchDemo/: README.md
mv3/apple/ExecuTorchDemo/ExecuTorchDemo.xcodeproj/: project.pbxproj
mv3/apple/ExecuTorchDemo/ExecuTorchDemo.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
mv3/apple/ExecuTorchDemo/ExecuTorchDemo.xcodeproj/project.xcworkspace/xcuserdata/nikhilviswanath.xcuserdatad/: UserInterfaceState.xcuserstate
mv3/apple/ExecuTorchDemo/ExecuTorchDemo.xcodeproj/xcuserdata/nikhilviswanath.xcuserdatad/xcschemes/: xcschememanagement.plist
mv3/apple/ExecuTorchDemo/ExecuTorchDemo/Sources/MobileNet/: MobileNetClassifier.swift
mv3/apple/MobileNetV3Demo/: README.md
mv3/python/: export.py
program-data-separation/: README.md  export_linear.py  export_lora.sh
program-data-separation/cpp/: CMakeLists.txt  README.md  build_example.sh  build_lora.sh  lora_main.cpp
program-data-separation/cpp/linear_example/: README.md  build_example.sh  main.cpp
program-data-separation/cpp/lora_example/: README.md  build_example.sh  main.cpp
stories110M/wasm/: CMakeLists.txt  README.md  build.sh  demo.html  demo.js  export.sh  sentencepiece_js.cpp
whisper/android/WhisperApp/: settings.gradle.kts
whisper/android/WhisperApp/app/: build.gradle.kts
whisper/android/WhisperApp/app/src/androidTest/java/com/example/whisperapp/: ExampleInstrumentedTest.kt
whisper/android/WhisperApp/app/src/main/: AndroidManifest.xml
whisper/android/WhisperApp/app/src/main/java/com/example/whisperapp/: MainActivity.kt
whisper/android/WhisperApp/app/src/main/java/com/example/whisperapp/ui/theme/: Color.kt  Theme.kt  Type.kt
whisper/android/WhisperApp/app/src/main/res/layout/: activity_main.xml
whisper/android/WhisperApp/app/src/main/res/values/: strings.xml  themes.xml
whisper/android/WhisperApp/app/src/test/java/com/example/whisperapp/: ExampleUnitTest.kt
whisper/android/WhisperApp/gradle/: libs.versions.toml
whisper/android/WhisperApp/gradle/wrapper/: gradle-wrapper.properties
